--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemon": "^3.1.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "stripe": "^16.7.0",
     "winston": "^3.13.0"
   }
 }
