--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "razorpay": "^2.9.4",
+    "socket.io": "^4.7.5",
     "stripe": "^16.7.0",
     "winston": "^3.13.0"
   }
