--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "google-auth-library": "^9.10.0",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.4.0",
