--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "razorpay": "^2.9.4",
     "socket.io": "^4.7.5",
     "stripe": "^16.7.0",
-    "winston": "^3.13.0"
+    "winston": "^3.13.0",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
